w17 08.02.2018 15:04:43 +0300 - build 5141

1. Форум: Запятые в дате

drkns 07.02.2018 23:31:59 +0000 - build 5140

1. Унифицированы диалоги Go To (Alt+F8) во вьювере и редакторе - теперь это один диалог. Возможны баги.

2. Окончательно истреблен UserDefinedList. Токенизация строк теперь везде ленивая и с минимальным или нулевым количеством аллокаций.

3. Прочий рефакторинг.

MZK 04.02.2018 22:16:59 -0800

1. Перевёл на английский странички @FindFileAdvanced и @PanelSettings в FarEng.hlf.m4.

2. Добавил отсутсвующие описания параметров в русскую и английскую справку.

w17 05.02.2018 01:51:12 +0300 - build 5139

1. fix 5136.2

zg 04.02.2018 19:58:46 +0200 - build 5138

1. guid для диалога "Информация о плагине".

zg 04.02.2018 15:03:05 +0200 - build 5137

1. если высота редактора/просмотра меньше трёх - панель клавиш не показывается.

2. если высота редактора/просмотра меньше двух - статусная строка не показывается.

drkns 03.02.2018 14:02:24 +0000 - build 5136

1. Не выдавались предупреждения о перезаписи при переносе нескольких файлов в один из них.
   Древнейший баг, существует аж с 1.0 b4.

2. GH #22: Add support for symbolic links creation without elevation.

3. Уточнения hlf, lng и документации.

4. Поддержка git в update_headers.bat

5. Пара мелочей.

MZK 01.02.2018 22:43:46 -0800

1. Перевёл на английский страничку @FindFile в FarEng.hlf.m4.

2. В справке и файле ресурсов заменил "codepage" на "code page".

zg 01.02.2018 22:12:58 +0200 - build 5135

1. в неполноэкранном редакторе/просмотре после ctrlo отрисовывался только редактор/просмотр.

2. в неполноэкранном редакторе/просмотре не работали ctrlb/ctrlshiftb.

3. с форума: в неполноэкранном редакторе/просмотре не всегда отрисовывалась панель клавиш.

MZK 28.01.2018 15:50:33 -0800

1. Перевёл на английский странички @FarAbout and @FarConfig в FarEng.hlf.m4.

zg 27.01.2018 14:55:05 +0200 - build 5134

1. 0003577: Неправильная работа UNDO после Editor.InsStr.

drkns 25.01.2018 22:03:48 +0000 - build 5133
