@@ -135,7 +135,7 @@ namespace os::reg
 		if (!query_value(native_handle(), Name, Type, Buffer) || !is_string_type(Type))
 			return false;
 
-		Value = string(reinterpret_cast<const wchar_t*>(Buffer.data()), Buffer.size() / sizeof(wchar_t));
+		Value.assign(reinterpret_cast<const wchar_t*>(Buffer.data()), Buffer.size() / sizeof(wchar_t));
 		if (!Value.empty() && Value.back() == L'\0')
 		{
 			Value.pop_back();
