@@ -1,3 +1,9 @@
+drkns 09.02.2018 00:33:16 +0000 - build 5142
+
+1. Уточнение 5140 - вернём логику "если разделитель в квадратных скобках, то это не разделитель" для списков масок.
+
+2. Рфакторинг.
+
 w17 08.02.2018 15:04:43 +0300 - build 5141
 
 1. Форум: Запятые в дате
